ffi/include/int2dds-ffi.h

typedef struct Int2DdsDynamicData Int2DdsDynamicData;
/**
 * Opaque handle to a DomainParticipant
 */
typedef struct Int2DdsParticipant Int2DdsParticipant;
typedef struct Int2DdsPublicationBuiltinTopicData Int2DdsPublicationBuiltinTopicData;
/**
 * Opaque handle to a Subscriber
 */
typedef struct Int2DdsSubscriber Int2DdsSubscriber;
/**
 * Opaque handle to a Topic
 */
typedef struct Int2DdsTopic Int2DdsTopic;
/**
 * Opaque QoS handle for Topic
 */
typedef struct Int2DdsTopicQos Int2DdsTopicQos;
/**
 * Opaque handle wrapping a discovered TypeObject.
 */
typedef struct Int2DdsTypeObject Int2DdsTypeObject;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
/**
 * C-visible per-member information returned by `int2dds_type_object_member_info`.
 */
typedef struct Int2DdsMemberInfo {
  uint32_t member_id;
  int32_t kind;
  int32_t flags;
} Int2DdsMemberInfo;
/**
 * Take a clone of the TypeObject embedded in a PublicationBuiltinTopicData.
 * Caller owns the returned handle and must destroy it via `int2dds_type_object_destroy`.
 * Returns DYNAMIC_FIELD_NOT_FOUND if the publication did not carry a TypeObject.
 */
Int2DdsRet int2dds_publication_builtin_topic_data_take_type_object(const struct Int2DdsPublicationBuiltinTopicData *data,
                                                                   struct Int2DdsTypeObject **out);
/**
 * Get the builtin subscriber for discovery topics.
 */
Int2DdsRet int2dds_participant_get_builtin_subscriber(const struct Int2DdsParticipant *participant,
                                                      struct Int2DdsSubscriber **out);
/**
 * Take one DCPSPublication discovery sample, optionally filtered by topic
 * name. Blocks up to `timeout_ms` milliseconds (negative = infinite). Returns
 * DYNAMIC_TIMEOUT on no match. Destroy the result via
 * `int2dds_publication_builtin_topic_data_destroy`.
 */
Int2DdsRet int2dds_subscriber_take_publication_data(const struct Int2DdsSubscriber *builtin_sub,
                                                    const char *topic_name_filter,
                                                    int32_t timeout_ms,
                                                    struct Int2DdsPublicationBuiltinTopicData **out);
/**
 * High-level helper: wait until a publication for `topic_name` is discovered
 * AND its TypeObject is present, then return the TypeObject and type name.
 */
Int2DdsRet int2dds_participant_wait_for_type_object(const struct Int2DdsParticipant *participant,
                                                    const char *topic_name,
                                                    int32_t timeout_ms,
                                                    struct Int2DdsTypeObject **type_obj_out,
                                                    char *type_name_buf,
                                                    uintptr_t type_name_buf_len,
                                                    uintptr_t *out_len);
/**
 * Destroy a TypeObject handle. Safe to call with null.
 */
void int2dds_type_object_destroy(struct Int2DdsTypeObject *t);
/**
 * Return extensibility: 0 = Final, 1 = Appendable, 2 = Mutable.
 */
Int2DdsRet int2dds_type_object_extensibility(const struct Int2DdsTypeObject *t, int32_t *out);
/**
 * Return the number of struct members.
 */
Int2DdsRet int2dds_type_object_member_count(const struct Int2DdsTypeObject *t, uint32_t *out);
/**
 * Fill `out` with member info at `index`.
 */
Int2DdsRet int2dds_type_object_member_info(const struct Int2DdsTypeObject *t,
                                           uint32_t index,
                                           struct Int2DdsMemberInfo *out);
/**
 * Copy member name at `index` into `buf`.
 */
Int2DdsRet int2dds_type_object_member_name(const struct Int2DdsTypeObject *t,
                                           uint32_t index,
                                           char *buf,
                                           uintptr_t buf_len,
                                           uintptr_t *out_len);
/**
 * Find a member index by name.
 */
Int2DdsRet int2dds_type_object_find_member(const struct Int2DdsTypeObject *t,
                                           const char *name,
                                           uint32_t *index_out);
/**
 * Register a topic backed by a discovered TypeObject. The TypeObject is cloned
 * internally; the caller still owns and must destroy `type_obj`.
 */
Int2DdsRet int2dds_create_topic_with_type_object(const struct Int2DdsParticipant *participant,
                                                 const char *topic_name,
                                                 const char *type_name,
                                                 const struct Int2DdsTypeObject *type_obj,
                                                 const struct Int2DdsTopicQos *qos,
                                                 struct Int2DdsTopic **out);
/**
 * Read a char8 field (returned as its byte value) from a flat sample.
 */
Int2DdsRet int2dds_dynamic_sample_get_char8(const uint8_t *bytes,
                                            uintptr_t len,
                                            const struct Int2DdsTypeObject *type_obj,
                                            const char *field_name,
                                            uint8_t *out);
/**
 * Read a string field by name from a flat sample.
 */
Int2DdsRet int2dds_dynamic_sample_get_string(const uint8_t *bytes,
                                             uintptr_t len,
                                             const struct Int2DdsTypeObject *type_obj,
                                             const char *field_name,
                                             char *out_buf,
                                             uintptr_t buf_cap,
                                             uintptr_t *out_len);
Int2DdsRet int2dds_dynamic_data_from_sample(const struct Int2DdsParticipant *participant,
                                            const uint8_t *bytes,
                                            uintptr_t len,
                                            const struct Int2DdsTypeObject *type_obj,
                                            struct Int2DdsDynamicData **out);
/**
 * Destroy a DynamicData handle. Safe to call with null.
 */
void int2dds_dynamic_data_destroy(struct Int2DdsDynamicData *d);
/**
 * Read a char8 field (as its byte value) at `field_path`.
 */
Int2DdsRet int2dds_dynamic_data_get_char8(const struct Int2DdsDynamicData *data,
                                          const char *field_path,
                                          uint8_t *out);
/**
 * Read a string field at `field_path` into a caller-supplied buffer.
 */
Int2DdsRet int2dds_dynamic_data_get_string(const struct Int2DdsDynamicData *data,
                                           const char *field_path,
                                           char *out_buf,
                                           uintptr_t buf_cap,
                                           uintptr_t *out_len);
/**
 * Get the element count of a sequence/array field at `field_path`.
 */
Int2DdsRet int2dds_dynamic_data_get_len(const struct Int2DdsDynamicData *data,
                                        const char *field_path,
                                        uintptr_t *out);
/**
 * Extract a nested struct value at `field_path` as a new DynamicData handle.
 * Destroy it with `int2dds_dynamic_data_destroy`.
 */
Int2DdsRet int2dds_dynamic_data_get_member(const struct Int2DdsDynamicData *data,
                                           const char *field_path,
                                           struct Int2DdsDynamicData **out);
/* Dynamic primitive sample getters (macro-generated in dynamic.rs;
* manually declared here because cbindgen does not expand macros). */
Int2DdsRet int2dds_dynamic_sample_get_bool  (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, bool     *out);
Int2DdsRet int2dds_dynamic_sample_get_i8    (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, int8_t   *out);
Int2DdsRet int2dds_dynamic_sample_get_u8    (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, uint8_t  *out);
Int2DdsRet int2dds_dynamic_sample_get_byte  (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, uint8_t  *out);
Int2DdsRet int2dds_dynamic_sample_get_i16   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, int16_t  *out);
Int2DdsRet int2dds_dynamic_sample_get_u16   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, uint16_t *out);
Int2DdsRet int2dds_dynamic_sample_get_i32   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, int32_t  *out);
Int2DdsRet int2dds_dynamic_sample_get_u32   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, uint32_t *out);
Int2DdsRet int2dds_dynamic_sample_get_i64   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, int64_t  *out);
Int2DdsRet int2dds_dynamic_sample_get_u64   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, uint64_t *out);
Int2DdsRet int2dds_dynamic_sample_get_f32   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, float    *out);
Int2DdsRet int2dds_dynamic_sample_get_f64   (const uint8_t *bytes, uintptr_t len, const struct Int2DdsTypeObject *type_obj, const char *field_name, double   *out);
/* Handle-based DynamicData getters (macro-generated; manually declared). */
Int2DdsRet int2dds_dynamic_data_get_bool (const struct Int2DdsDynamicData *data, const char *field_path, bool     *out);
Int2DdsRet int2dds_dynamic_data_get_i8   (const struct Int2DdsDynamicData *data, const char *field_path, int8_t   *out);
Int2DdsRet int2dds_dynamic_data_get_u8   (const struct Int2DdsDynamicData *data, const char *field_path, uint8_t  *out);
Int2DdsRet int2dds_dynamic_data_get_i16  (const struct Int2DdsDynamicData *data, const char *field_path, int16_t  *out);
Int2DdsRet int2dds_dynamic_data_get_u16  (const struct Int2DdsDynamicData *data, const char *field_path, uint16_t *out);
Int2DdsRet int2dds_dynamic_data_get_i32  (const struct Int2DdsDynamicData *data, const char *field_path, int32_t  *out);
Int2DdsRet int2dds_dynamic_data_get_u32  (const struct Int2DdsDynamicData *data, const char *field_path, uint32_t *out);
Int2DdsRet int2dds_dynamic_data_get_i64  (const struct Int2DdsDynamicData *data, const char *field_path, int64_t  *out);
Int2DdsRet int2dds_dynamic_data_get_u64  (const struct Int2DdsDynamicData *data, const char *field_path, uint64_t *out);
Int2DdsRet int2dds_dynamic_data_get_f32  (const struct Int2DdsDynamicData *data, const char *field_path, float    *out);
Int2DdsRet int2dds_dynamic_data_get_f64  (const struct Int2DdsDynamicData *data, const char *field_path, double   *out);